Navbar naast content
- Navbar en Content staan naast elkaar in plaats van te overlappen.
- De content staat nu in een element. De content en navbar staan in een element.

--- a/src/components/pages/Dashboard.scss
+++ b/src/components/pages/Dashboard.scss
@@ -11,8 +11,31 @@
     position:           sticky;
     top:                0px;
     z-index:            5;
+    @media (max-width: 480px){
+        font-size: 25px;
+    }
 }
 
 h1 {
     margin-bottom: 0px;
+}
+
+wrapper {
+    
+    position:           fixed;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    top: 90px;
+
+}
+
+
+content {
+    display: block;
+    float: left;
+    right: 0px;
+//    padding: 30px;
+    overflow: scroll;
+    height: 100%;
 }
