--- a/src/components/navbar/style.Navbar.scss
+++ b/src/components/navbar/style.Navbar.scss
@@ -6,6 +6,7 @@ nav {
     min-width:          fit-content;
     position: relative;
     float: left;
+    padding-top: 12px;
     
     display: block;
     
