--- a/client/src/components/screen-replication/style.ScreenReplication.scss
+++ b/client/src/components/screen-replication/style.ScreenReplication.scss
@@ -5,7 +5,7 @@
   
   .wrapped-iframe {
     position: block;
-    width: 500px;
-    height: 300px;
+    width: 100%;
+    height: 750px;
     border: 1;
   }
