fix voor dashboard homepagina schermreplicatie responsiveness

--- a/client/src/components/screen-replication/style.ScreenReplication.scss
+++ b/client/src/components/screen-replication/style.ScreenReplication.scss
@@ -1,11 +1,12 @@
 .screenReplication-wrap {
     position: block;
     overflow: hidden;
+    height: 100%;
   }
   
   .wrapped-iframe {
     position: block;
     width: 100%;
-    height: 750px;
+    height: 100%;
     border: 1;
   }
