--- a/client/src/pages/dashboard/style.Dashboard.scss
+++ b/client/src/pages/dashboard/style.Dashboard.scss
@@ -1,3 +1,4 @@
+//header specs
 .Screen{
     text-align:         center;
     background-color:   #13a0da;
@@ -20,6 +21,7 @@ h1 {
     margin-bottom: 0px;
 }
 
+//positie tov header (dus alles onder header)
 wrapper {
     
     position:           fixed;
@@ -36,5 +38,5 @@ content {
     right: 0px;
    padding: 30px;
     overflow: scroll;
-    height: 90%; //als padding uit staat, zet deze dan weer op 100%
+    height: 92.5%; //als padding uit staat, zet deze dan weer op 100%
 }
