--- a/client/src/components/kennisdeling-slide/style.KennisdelingSlide.scss
+++ b/client/src/components/kennisdeling-slide/style.KennisdelingSlide.scss
@@ -4,3 +4,60 @@ html, body{
     background-repeat: no-repeat;
    height: 100%;
 }
+
+.kennisdeling-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  
+    .kennisdeling-1 {
+      background-color: red;
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .kennisdeling-2 {
+      background-color: blue;
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .kennisdeling-3 {
+      background-color: green;
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .kennisdeling-4 {
+      background-color: yellow;
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .main-title {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
+      font-size: 3rem;
+    }
+  }
