--- a/client/src/components/debug-slide/style.DebugSlide.scss
+++ b/client/src/components/debug-slide/style.DebugSlide.scss
@@ -9,8 +9,8 @@ footer{
     color: white;
 }
 body{
-    background: rgb(231,48,43);
-background: linear-gradient(360deg, rgba(231,48,43,1) 0%, rgba(0,161,226,1) 100%);
+//    background: rgb(231,48,43);
+//background: linear-gradient(360deg, rgba(231,48,43,1) 0%, rgba(0,161,226,1) 100%);
 background-repeat: no-repeat;
 height: 100%;
 }
