--- a/client/src/pages/registration/style.registration.scss
+++ b/client/src/pages/registration/style.registration.scss
@@ -12,31 +12,45 @@ html {
     color: #fff;
 }
 
-body {
-    min-height: 100vh;
-    background-color: dodgerblue;
+
+.registerbg {
+    height: 100vh;
+    background-color: #f2f4f3;
+    display: flex;
 }
 
-.App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh; 
-  padding: 1rem 0.5rem;
+.containerbox {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
 }
 
-section {
+// .App {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   min-height: 100vh; 
+//   padding: 1rem 0.5rem;
+// }
+
+.box1 {
     width: 100%;
-    max-width: 420px;
-    min-height: 400px;
+    height: 100%;
+ 
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: #13A0DA
 }
 
+.register {
+    font-size: 18px;
+}
 form {
     display: flex;
     flex-direction: column;
@@ -46,19 +60,25 @@ form {
 }
 
 a, a:visited {
-    color: #fff;
+    color: black;
+    text-decoration: none;
 }
 
 input[type="text"],
 input[type="password"],
-button,
 textarea {
   font-family: 'Nunito', sans-serif;
-  font-size: 22px;
+  font-size: 16px;
   padding: 0.25rem;
-  border-radius: 0.5rem;
+  border-radius: 7px;
 }
 
+input {
+    margin-top: 5px;
+}
+label {
+    font-size: 15px;
+}
 label,
 button {
   margin-top: 1rem;
@@ -111,4 +131,44 @@ button {
 
 .line {
     display: inline-block;
+}
+
+
+///////////
+
+
+.box2 {
+    background-color: #E72B27;
+    position: relative;
+    width: 100%;
+    padding: 1rem;
+    padding-top: 30%;
+    // min-width: 300px;
+}
+
+.text1 {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.loginbutton {
+    margin-top: 5px;
+    text-align: center;
+}
+
+.aanmeldenknop {
+    border-radius: 7px;
+    width: 50%;
+}
+
+.aanmeldenknop:hover {
+    background-color: lightgray;
+}
+.loginknop {
+    border-radius: 7px;
+}
+
+.loginknop:hover {
+    background-color: lightgray;
 }
