--- a/client/src/pages/login/style.Login.scss
+++ b/client/src/pages/login/style.Login.scss
@@ -12,10 +12,12 @@ html {
     color: #fff;
 }
 
-body {
+
+.loginbg {
     min-height: 100vh;
-    background-color: dodgerblue;
+    background-color: #f2f4f3;
 }
+
 
 .App {
   display: flex;
@@ -34,8 +36,7 @@ section {
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
-    background-color: rgba(0,0,0,0.4);
-}
+    background-color: #13A0DA}
 
 form {
     display: flex;
@@ -51,7 +52,6 @@ a, a:visited {
 
 input[type="text"],
 input[type="password"],
-button,
 textarea {
   font-family: 'Nunito', sans-serif;
   font-size: 22px;
@@ -111,4 +111,19 @@ button {
 
 .line {
     display: inline-block;
+}
+
+.inloggen {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.inlogbutton {
+    max-width: 50%;
+    border-radius: 7px;
+}
+
+.inlogbutton:hover {
+    background-color: lightgray;
+    
 }
