--- a/client/src/pages/login/style.Login.scss
+++ b/client/src/pages/login/style.Login.scss
@@ -36,6 +36,7 @@ section {
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
+    border-radius: 10px 0px 0px 10px;
     background-color: #13A0DA}
 
 form {
