--- a/client/src/pages/registration/style.registration.scss
+++ b/client/src/pages/registration/style.registration.scss
@@ -25,6 +25,7 @@ html {
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
+    border-radius: 7px;
 }
 
 // .App {
@@ -39,7 +40,7 @@ html {
 .box1 {
     width: 100%;
     height: 100%;
- 
+    border-radius: 10px 0px 0px 10px;
 
     display: flex;
     flex-direction: column;
@@ -143,6 +144,7 @@ button {
     width: 100%;
     padding: 1rem;
     padding-top: 30%;
+    border-radius: 0px 10px 10px 0px;
     // min-width: 300px;
 }
 
