Cookies werken, themas werken

--- a/client/src/components/groep-overzicht/style.GroepOverzicht.scss
+++ b/client/src/components/groep-overzicht/style.GroepOverzicht.scss
@@ -26,13 +26,13 @@ scr {
     text-align: right;
 }
 
-container {
-    background-color: #dcdcdd;
-    margin: 10px;
-    padding: 5px;
-    display: inline-block;
-    width: fit-content;
-    border-radius: 2em;
+SContainer {
+//    background-color: #dcdcdd;
+    // margin: 10px;
+    // padding: 5px;
+    // display: inline-block;
+    // width: fit-content;
+    // border-radius: 2em;
 }
 
 .optie {
