Screen replication werkt beter, voltooide navbar

--- a/client/src/components/debug-slide/style.DebugSlide.scss
+++ b/client/src/components/debug-slide/style.DebugSlide.scss
@@ -3,6 +3,7 @@ footer{
     grid-template-columns:1fr 1fr 1fr;
     position:fixed;
     bottom:0px;
+    left: 0px;
     width:100%;
     text-align: center;
     background-color: #13A0DA;
