--- a/client/src/components/kennisdeling-slide/style.KennisdelingSlide.scss
+++ b/client/src/components/kennisdeling-slide/style.KennisdelingSlide.scss
@@ -4,3 +4,14 @@ html, body{
     background-repeat: no-repeat;
    height: 100%;
 }
+
+.kennisdeling-wrapper{
+    background: grey;
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
