Debug slide klopt weer

--- a/client/src/components/debug-slide/style.DebugSlide.scss
+++ b/client/src/components/debug-slide/style.DebugSlide.scss
@@ -8,6 +8,7 @@ footer{
     text-align: center;
     background-color: #13A0DA;
     color: white;
+    z-index: 100;
 }
 body{
     background: rgb(231,48,43);
