--- a/client/src/components/slide-kennisdeling/style.KennisdelingSlide.scss
+++ b/client/src/components/slide-kennisdeling/style.KennisdelingSlide.scss
@@ -5,13 +5,13 @@ html, body{
    height: 100%;
 }
 
-.kennisdeling-wrapper{
-    background: grey;
-    position: absolute;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+// .kennisdeling-wrapper{
+//     background: grey;
+//     position: absolute;
+//     z-index: 100;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+// }
