--- a/client/src/components/slide-kennisdeling/style.KennisdelingSlide.scss
+++ b/client/src/components/slide-kennisdeling/style.KennisdelingSlide.scss
@@ -15,3 +15,59 @@ html, body{
 //     height: 100%;
 //     object-fit: cover;
 // }
+.kennisdeling-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  
+    .kennisdeling-1 {
+      background-color: red;
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .kennisdeling-2 {
+      background-color: blue;
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .kennisdeling-3 {
+      background-color: green;
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .kennisdeling-4 {
+      background-color: yellow;
+      width: 50%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .main-title {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
+      font-size: 3rem;
+    }
+  }
