--- a/client/src/components/forms/style.Forms.scss
+++ b/client/src/components/forms/style.Forms.scss
@@ -1,15 +1,11 @@
-.groepEdit {
-    margin: 30px;
-
-
-h1 {
-    font-size: 30px;
-}
-
-.input {
+form {
+    
+    input {
     background-color: #aaa8ab;
     margin: 10px;
+    padding: 2px;
     border-radius: 1em;
     border: none;
 }
+
 }
