--- a/client/src/components/groep-overzicht/style.GroepOverzicht.scss
+++ b/client/src/components/groep-overzicht/style.GroepOverzicht.scss
@@ -1,7 +1,7 @@
 .groepOverzicht {
     text-align: center;
     width: 100%;
-}
+
 
 .filters {
     margin: 10px;
@@ -56,4 +56,4 @@ SContainer {
     margin: 10px;
     border-radius: 1em;
     border: none;
-}
+}}
