--- a/client/src/pages/login/style.Login.scss
+++ b/client/src/pages/login/style.Login.scss
@@ -20,113 +20,173 @@ html {
     background-color: #f2f4f3;
 }
 
+.loginbg{
 
-.App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh; 
-  padding: 1rem 0.5rem;
-}
-
-section {
-    width: 100%;
-    max-width: 420px;
-    min-height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 1rem;
-    border-radius: 10px 0px 0px 10px;
-    background-color: #13A0DA}
-
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-grow: 1;
-    padding-bottom: 1rem;
-}
-
-a, a:visited {
-    color: #fff;
-}
-
-input[type="text"],
-input[type="password"],
-textarea {
-  font-family: 'Nunito', sans-serif;
-  font-size: 22px;
-  padding: 0.25rem;
-  border-radius: 0.5rem;
-}
-
-label,
-button {
-  margin-top: 1rem;
-}
-
-button {
-  padding: 0.5rem;
-}
-
-.instructions {
-    font-size: 0.75rem;
-    border-radius: 0.5rem;
-    background: #000;
-    color: #fff;
-    padding: 0.25rem;
-    position: relative;
-    bottom: -10px;
-}
-
-.instructions > svg {
-    margin-right: 0.25rem;
-}
-
-.offscreen {
-    position: absolute;
-    left: -9999px;
-}
-
-.hide {
-    display: none;
-}
-
-.valid {
-    color: limegreen;
-    margin-left: 0.25rem;
-}
-
-.invalid {
-    color: red;
-    margin-left: 0.25rem;
-}
-
-.errmsg {
-    background-color: lightpink;
-    color: firebrick;
-    font-weight: bold;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.line {
-    display: inline-block;
-}
-
-.inloggen {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.inlogbutton {
-    max-width: 50%;
-    border-radius: 7px;
-}
-
-.inlogbutton:hover {
-    background-color: lightgray;
+    .containerbox {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        border-radius: 7px;
+    }
+    
+    // .App {
+    //   display: flex;
+    //   flex-direction: column;
+    //   justify-content: center;
+    //   align-items: center;
+    //   min-height: 100vh; 
+    //   padding: 1rem 0.5rem;
+    // }
+    
+    .box1 {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px 0px 0px 10px;
+    
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 1rem;
+        background-color: #13A0DA
+    }
+    
+    .register {
+        font-size: 18px;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        flex-grow: 1;
+        padding-bottom: 1rem;
+    }
+    
+    a, a:visited {
+        color: black;
+        text-decoration: none;
+    }
+    
+    input[type="text"],
+    input[type="password"],
+    textarea {
+      font-family: 'Nunito', sans-serif;
+      font-size: 16px;
+      padding: 0.25rem;
+      border-radius: 7px;
+    }
+    
+    input {
+        margin-top: 5px;
+    }
+    label {
+        font-size: 15px;
+    }
+    label,
+    button {
+      margin-top: 1rem;
+    }
+    
+    button {
+      padding: 0.5rem;
+    }
+    
+    .instructions {
+        font-size: 0.75rem;
+        border-radius: 0.5rem;
+        background: #000;
+        color: #fff;
+        padding: 0.25rem;
+        position: relative;
+        bottom: -10px;
+    }
+    
+    .instructions > svg {
+        margin-right: 0.25rem;
+    }
+    
+    .offscreen {
+        position: absolute;
+        left: -9999px;
+    }
+    
+    .hide {
+        display: none;
+    }
+    
+    .valid {
+        color: limegreen;
+        margin-left: 0.25rem;
+    }
+    
+    .invalid {
+        color: red;
+        margin-left: 0.25rem;
+    }
+    
+    .errmsg {
+        background-color: lightpink;
+        color: firebrick;
+        font-weight: bold;
+        padding: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+    
+    .line {
+        display: inline-block;
+    }
+    
+    
+    ///////////
+    
+    
+    .box2 {
+        background-color: #E72B27;
+        position: relative;
+        width: 100%;
+        padding: 1rem;
+        padding-top: 30%;
+        border-radius: 0px 10px 10px 0px;
+        // min-width: 300px;
+    }
+    
+    .text1 {
+        font-size: 15px;
+        text-align: center;
+        font-weight: 400;
+    }
+    
+    .loginbutton {
+        margin-top: 5px;
+        text-align: center;
+    }
+    
+    .inlogbutton {
+        border-radius: 7px;
+        width: 50%;
+    }
+    
+    .inlogbutton:hover {
+        background-color: lightgray;
+    }
+    .loginknop {
+        border-radius: 7px;
+    }
+    
+    .loginknop:hover {
+        background-color: lightgray;
+    }
+    
+    .inloggentekst {
+        font-size: 15px;
+        text-decoration: underline;
+    
+    }
+    
+    ::placeholder {
+        font-size: 12px;
+        padding-left: 10px;
+    }
     
 }
