--- a/client/src/components/slide-kennisdeling/KennisdelingSlide2.scss
+++ b/client/src/components/slide-kennisdeling/KennisdelingSlide2.scss
@@ -1,14 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
-p {
-    font-family: 'Manrope', sans-serif;
-}
 
 
-.kennisdelingslide {
+.kennisdelingslide-container {
     background-color: #f9f6f3;
     height: 100vh;
     position: absolute;
@@ -18,120 +18,104 @@ p {
     bottom: 0px;
     z-index: 300;
 
+    p {
+        font-family: 'Manrope', sans-serif;
+    }
 
 
-.kennisdelingslide-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2%;
-}
+            .kennisdelingslide-bar {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 2%;
+            }
 
-.kennisdeling-logo img {
-    width: 150px;
-    height: 125px;
-}
+            .kennisdeling-logo img {
+                width: 150px;
+                height: 125px;
+            }
 
-.kennisdelingslide-headline {
-    text-align: center;
-    flex-grow: 1;
-    text-transform: uppercase;
-    font-size: 50px;
-    font-family: 'Paytone One', sans-serif;
-}
+            .kennisdelingslide-headline {
+                text-align: center;
+                flex-grow: 1;
+                text-transform: uppercase;
+                font-size: 50px;
+                font-family: 'Paytone One', sans-serif;
+            }
 
-.kennis, .delingen {
-    display: inline-block;
-}
+            .kennis, .delingen {
+                display: inline-block;
+            }
 
-.kennis {
-    color: #01a6de;
-}
+            .kennis {
+                color: #01a6de;
+            }
 
-.delingen {
-    color: #ef4129;
-}
+            .delingen {
+                color: #ef4129;
+            }
 
 
-.kennisdeling-grid{
+   .kennisdeling-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1fr);
-    grid-column-gap: 75px;
-    grid-row-gap: 75px;
-    padding-left: 3%;
-    padding-bottom: 1%;
-    padding-top: 1%;
-    padding-right: 3%;
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 5%;
+    grid-row-gap: 5%;
+    padding: 2%;
 
-}
+   }         
 
-
-.kennisdeling-container{
-    background-color: white;
-    border-radius: 2vw;
-    padding: 2vw;
+.kennisdeling-container {
     display: grid;
     grid-template-columns: 30% 70%;
-    grid-template-rows: auto 1 fr;
-    grid-column-gap: 5%;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
     grid-row-gap: 0px;
-  
+    background-color: white;
+    padding: 2vw;
+    border-radius: 2em;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.kennisdeling-image img {
-    width: 100%;
-    height: 100%;
-    border-radius: 1vw;
+.kennisdeling-info{
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    
 }
 
-.kennisdeling-titel{
+.kennisdeling-titel {
     color: #01a6de;
-    font-weight: 900;
-    font-size: 50px;
+    font-weight: 700;
+    font-size: 42px;
     letter-spacing: 0.03vw;
     line-height: 1.5;
-
 }
 
-.kennisdeling-spreker{
+.kennisdeling-spreker {
     color: #747491;
     letter-spacing: -0.02vw;
     line-height: 1.5;
-    font-size: 24px;
+    font-size: 20px;
 }
 
-.kennisdeling-gegevens2{
-    display: flex;
-    flex-direction: column;
-}
-.kennisdeling-tekst{
-    max-width: 90%;
+.kennisdeling-tekst {
     font-size: 24px;
     color: #020202;
     line-height: 1.1;
     letter-spacing: 0.01vw;
-    display: flex;
-    bottom: 0;
-    margin-top: 2em;
 }
 
-.kennisdeling-gegevens1 {
-    font-size: 25px;
-    align-self: flex-end;
+.kennisdeling-gegevens2 {
     display: flex;
     flex-direction: row;
-    margin-top: 3em;
-    width: 50%;
+    align-self: flex-end;
     font-weight: bold;
-    grid-column: 1 / -1; /* Added this line */
 }
 
-
-.divide {
-    margin-left: 1em;
-    margin-right: 1em;
+.kennisdeling-gegevens2-scheiding {
+    display: flex;
+    margin: 0em 1em 0em 1em;
 }
-
-
 }
