--- a/client/src/components/slide-kennisdeling/KennisdelingSlide2.scss
+++ b/client/src/components/slide-kennisdeling/KennisdelingSlide2.scss
@@ -18,6 +18,7 @@
     bottom: 0px;
     z-index: 300;
 
+
     p {
         font-family: 'Manrope', sans-serif;
     }
@@ -30,9 +31,11 @@
                 padding: 2%;
             }
 
-            .kennisdeling-logo img {
-                width: 150px;
-                height: 125px;
+            .kennisdeling-logo {
+                background-image: url('../../assets/open-ict-logo.png');
+                width: 100px;
+                height: 90px;
+                background-size: cover;
             }
 
             .kennisdelingslide-headline {
@@ -62,7 +65,9 @@
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 5%;
     grid-row-gap: 5%;
-    padding: 2%;
+    padding: 1% 2% 1% 2%;
+    zoom: 75%;
+
 
    }         
 
